[gd_scene load_steps=6 format=3 uid="uid://c8olx87cwk8de"]

[ext_resource type="Script" path="res://scripts/journal/detail_photo.gd" id="1_2hem5"]
[ext_resource type="StyleBox" uid="uid://br1h32sevkmii" path="res://resources/style_box.tres" id="2_iklvy"]
[ext_resource type="Texture2D" uid="uid://b7ketm80emllt" path="res://assets/Menu Buttons/Square Buttons/Back Square Button.png" id="3_taqi7"]
[ext_resource type="Script" path="res://scripts/gui/generic_texture_button.gd" id="4_xefrg"]
[ext_resource type="Texture2D" uid="uid://7yva2qd6xfvm" path="res://assets/Menu Buttons/Square Buttons/tts_button.png" id="4_ye2vl"]

[node name="DetailPhoto" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2hem5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.3
anchor_bottom = 1.0
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_iklvy")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture_normal = ExtResource("3_taqi7")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("4_xefrg")

[node name="Control" type="Control" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureButton2" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture_normal = ExtResource("4_ye2vl")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("4_xefrg")

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 3

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/TextureButton2" to="." method="_on_tts_pressed"]
